--- a/src/protected/application/themes/BaseV1/assets/css/sass/application/_seal-relation.scss
+++ b/src/protected/application/themes/BaseV1/assets/css/sass/application/_seal-relation.scss
@@ -1,17 +1,45 @@
 .display-seal-relation {
-    //display: inline;
     width: 90%;
 }
 
-.seal-avatar{
+.seal-avatar {
     float: left;
     width: 15%;
-    margin-left: auto;
+    margin-left: 15rem;
     margin-right: auto;
 }
 
-.agent-avatar{
+.agent-avatar {
     width: 15%;
-    margin-left: auto;
+    margin-left: 25rem;
     margin-right: auto;
+}
+
+#main-footer, body{
+    background-color: #eee;
+}
+
+#seal-info-container {
+    margin-top: 3rem;
+
+    #seal-name, #agent-name {
+        text-align: center;
+    }
+    .seal-text{
+        font-weight: bold;
+    }
+    #seal-print-container {
+        margin-top: 1rem;
+    }
+    #seal-print-container {
+        margin-left: 5rem;
+        background-color: rgba(120, 120, 120, 0.04);
+    }
+}
+
+#expiration-date {
+    width: 25%;
+    margin-left: 5rem;
+    margin-top: 2rem;
+    background-color: rgba(120, 120, 120, 0.04);
 }
