--- a/src/protected/application/themes/BaseV1/assets/css/sass/application/_modal-crop-image.scss
+++ b/src/protected/application/themes/BaseV1/assets/css/sass/application/_modal-crop-image.scss
@@ -2,10 +2,12 @@
 .modal-crop {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    align-content: center;
+    z-index: 10; /* Sit on top */
     padding-top: 100px; /* Location of the box */
     left: 0;
     top: 0;
+    margin-bottom: 50px;
     width: 100%; /* Full width */
     height: 100%; /* Full height */
     overflow: auto; /* Enable scroll if needed */
@@ -13,14 +15,23 @@
     background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
 }
 
+#form-crop-image {
+    position: absolute;
+    left: 30%;
+    top: 20%;
+}
+
 /* Modal Content (image) */
 .modal-content {
     margin: auto;
     display: block;
-    width: 80%;
-    max-width: 700px;
+    width: 100%;
+    max-width: 900px;
 }
 
+#modal-action {
+    margin-top: 10px;
+}
 /* Add Animation */
 .modal-content {    
     -webkit-animation-name: zoom;
@@ -37,24 +48,6 @@
 @keyframes zoom {
     from {transform:scale(0)} 
     to {transform:scale(1)}
-}
-
-/* The Close Button */
-.close {
-    position: absolute;
-    top: 15px;
-    right: 35px;
-    color: #f1f1f1;
-    font-size: 40px;
-    font-weight: bold;
-    transition: 0.3s;
-}
-
-.close:hover,
-.close:focus {
-    color: #bbb;
-    text-decoration: none;
-    cursor: pointer;
 }
 
 /* 100% Image Width on Smaller Screens */
